# OpenGl-Graphics

./: CMakeLists.txt  main.cpp  readme.md  source
data/: door.mtl  table.mtl
